--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+
 *{
     margin: 0;
     padding: 0;
@@ -11,6 +14,7 @@ body{
 h1{
     margin-top: 50px;
     font-size: 50px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .container{
@@ -60,7 +64,7 @@ h1{
     background-color: #047857;
     color: #cce6de;
     border: none;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 .msg-container{
@@ -71,9 +75,38 @@ h1{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .hide{
     display: none;
 }
 
+@media (max-width: 430px) {
+
+    h1{
+        font-size: 60px;
+    }
+
+    .msg-container{
+        font-size: 28px;
+        color: #754815;
+        height: 50vmin;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    #new-btn{
+        text-align: center;
+        height: 6vmin;
+        width: 22vmin;
+        border-radius: 0.2rem;
+        background-color: #047857;
+        color: #cce6de;
+        border: none;
+        margin-top: 30px;
+    }
+    
+}
