--- a/style.css
+++ b/style.css
@@ -108,5 +108,12 @@ h1{
         border: none;
         margin-top: 30px;
     }
+
+    .container{
+        height: 50vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     
 }
